--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "uuid": "^9.0.0"
