--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
